@@ -1,0 +1,14 @@
+Release: 	1
+Source: 	ftp://ftp.gnustep.org/pub/gnustep/core/%{gs_name}-%{gs_version}.tar.gz
+Copyright: 	GPL
+Group: 		Development/Tools
+Summary: 	GNUstep Base library package - debugging version
+Packager:	Adam Fedor <fedor@gnu.org>
+Vendor:		The GNUstep Project
+URL:		http://www.gnustep.org/
+Requires:	gnustep-make = 0.9.0
+
+%description 
+This package contains the debuggable version of the GNUstep Base
+Library.  You probably only need it if you want to compile debuggable
+GNUstep programs.
